<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.hello2morrow.dda</groupId>
  <artifactId>crm-domain-example</artifactId>
  <packaging>jar</packaging>
  <version>5.0.0-SNAPSHOT</version>
  <name>CRM Domain Example</name>
  <url>http://www.hello2morrow.com</url>

  <dependencies>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.17</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <pluginRepositories>
    <pluginRepository>
      <id>maven-central-repository</id>
      <url>http://repo1.maven.org/maven2</url>
    </pluginRepository>
    <pluginRepository>
      <id>hello2morrow.maven.repository</id>
      <url>http://maven.hello2morrow.com/repository</url>
    </pluginRepository>
  </pluginRepositories>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
    <sourceDirectory>src/java</sourceDirectory>
  </build>
  <profiles>
    <profile>
      <id>standard</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>com.hello2morrow</groupId>
            <artifactId>sonargraph-maven-plugin</artifactId>
            <version>9.2.0</version>
            <configuration>
              <reportDirectory>target/report</reportDirectory>
              <reportFileName>sonargraph-report-123</reportFileName>
              <reportType>full</reportType>
              <reportFormat>xml,html</reportFormat>
              <autoUpdate>true</autoUpdate>
              <activationCode>36E2-0F3E-643F-B4F2</activationCode>
              <logLevel>info</logLevel>
              <failSet>
                <failOnEmptyWorkspace>true</failOnEmptyWorkspace>
                <includes>
                  <include>
                    <issueType>NamespaceCycleGroup</issueType>
                  </include>
                  <include>
                    <issueType>ArchitectureViolation</issueType>
                  </include>
                </includes>
                <excludes>
                  <exclude>
                    <issueType>ScriptCompilationError</issueType>
                    <resolution>none</resolution>
                  </exclude>
                </excludes>
              </failSet>
            </configuration>
            <executions>
              <execution>
                <goals>
                  <goal>create-report</goal>
                  <goal>dynamic-report</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
